refactor(config): CORS 허용 출처 단일 설정화, Jackson 설정 출처 일원화, 모듈 yml 범위 주석 정정
검토에서 나온 정리 사항 반영.
- gachiga.cors.allowed-origins 한 곳을 CorsConfig 와 WebSocketConfig 가 함께 읽는다
- application.yml 의 spring.jackson.* 제거 (JacksonConfig 가 항상 이기므로 혼동을 막는다)
- domain/{auth,matching,route}.yml 머리말을 PRD §9.2 소유 범위와 일치시킴
- ArchUnit 이 config 패키지 import 도 막도록 강화 (CLAUDE.md §4 문구와 일치)

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>